--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,52 @@
-.App {
-  text-align: center;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: sans-serif;
+}
+div#root {
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden!important;
+}
+body {
+    margin: 0;    
+    padding: 0;    
+    transition: all 0.25s linear;
+    overflow-x: hidden!important;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.container-card{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr))!important;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+
+.card{
+    margin: 20px;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    border-radius: 20px;
+    background-color: #333;
+    box-shadow: 5px 5px 13px 0px black;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.card > img{
+    border-radius: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+.title {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    padding: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.title > h1{
+    font-size: 22px;
+    text-transform: uppercase;
+    color: white
 }
